Update and rename SVG Scripting.html to index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button type = "button" onclick = "window.print()">Print</button>
      
     <p id = "time">Hello World</p>
-    <p id = "demo">I have awakened.</p>
+    <p id = "demo" style = "color:red">I have awakened.</p>
     <p>but you may be interested to know</p>
     <p id = "math"></p>
     <p id = "list"></p>
